--- a/cfn/parent-template.yaml
+++ b/cfn/parent-template.yaml
@@ -2,8 +2,17 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: Parent stack to manage nested stacks
 
 Parameters:
-  S3Bucket:
+  AthenaDatabaseName:
     Type: String
+    Default: 'athena_db'
+  S3BucketName:
+    Type: String
+    Default: 'sl-data-store-{ENTER ALIAS}'
+    Description: Name of the S3 bucket to create and store data
+  AthenaOutputBucketName:
+    Type: String
+    Default: 'sl-athena-output-{ENTER ALIAS}'
+    Description: Name of the S3 bucket to store Athena query results
   LambdaS3Bucket:
     Type: String
   LambdaS3Key:
@@ -19,7 +28,7 @@ Resources:
   S3AndLambdaStack:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
-      TemplateURL: !Sub 'https://${S3Bucket}/s3-and-lambda-template.yaml'
+      TemplateURL: !Sub 'https://${S3BucketName}/s3-and-lambda-template.yaml'
       Parameters:
         LambdaS3Bucket: !Ref LambdaS3Bucket
         LambdaS3Key: !Ref LambdaS3Key
@@ -27,19 +36,22 @@ Resources:
   AthenaStack:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
-      TemplateURL: !Sub 'https://${S3Bucket}/athena-template.yaml'
+      TemplateURL: !Sub 'https://${S3BucketName}/athena-template.yaml'
       Parameters:
-        S3Bucket: !Ref S3Bucket
+        AthenaDatabaseName: !Ref AthenaDatabaseName
+        S3BucketName: !Ref S3BucketName
+        AthenaOutputBucketName: !Ref AthenaOutputBucketName
     DependsOn: S3AndLambdaStack
 
   BedrockAgentStack:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
-      TemplateURL: !Sub 'https://${S3Bucket}/bedrock-agent-template.yaml'
+      TemplateURL: !Sub 'https://${S3BucketName}/bedrock-agent-template.yaml'
       Parameters:
         AgentResourceRoleArn: !Ref AgentResourceRoleArn
         CustomerEncryptionKeyArn: !Ref CustomerEncryptionKeyArn
         FoundationModel: !Ref FoundationModel
+        AthenaOutputBucketName: !Ref AthenaOutputBucketName
     DependsOn: AthenaStack
 
 Outputs:
@@ -52,6 +64,9 @@ Outputs:
   AthenaDatabaseName:
     Description: 'Name of the Athena database created'
     Value: !GetAtt AthenaStack.Outputs.AthenaDatabaseName
+  AthenaOutputBucketName:
+    Description: 'Name of the S3 bucket for Athena query results'
+    Value: !GetAtt AthenaStack.Outputs.AthenaOutputBucketName
   BedrockAgentName:
     Description: 'Name of the Bedrock Agent created'
     Value: !GetAtt BedrockAgentStack.Outputs.BedrockAgentName
