--- a/cfn/3-ec2-streamlit-template.yaml
+++ b/cfn/3-ec2-streamlit-template.yaml
@@ -13,7 +13,7 @@ Parameters:
   MapPublicIpOnLaunch:
     Description: Disabled by default. Enable for public IP assignment for EC2 instance connect
     Type: String
-    Default: false
+    Default: true
     AllowedValues:
       - false
       - true
