--- a/cfn/3-ec2-streamlit-template.yaml
+++ b/cfn/3-ec2-streamlit-template.yaml
@@ -2,14 +2,44 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: CloudFormation template to launch an EC2 instance with Streamlit application.
 
 Parameters:
-  InstanceType:
-    Description: EC2 instance type
+  SSHRegionIPsAllowed:
+    Description: Provides EC2 SSH access for CIDR range in a region. (Default is us-west-2)
     Type: String
-    Default: t3.small
+    Default: 18.237.140.160/29
     AllowedValues:
-      - t3.small
-      - t3.medium
-      - t3.large
+      - 18.237.140.160/29
+      - 18.206.107.24/29
+      - 43.196.20.40/29
+      - 43.192.155.8/29
+      - 18.252.4.0/30
+      - 15.200.28.80/30
+      - 13.244.121.196/30
+      - 43.198.192.104/29
+      - 3.112.23.0/29
+      - 13.209.1.56/29
+      - 15.168.105.160/29
+      - 13.233.177.0/29
+      - 18.60.252.248/29
+      - 3.0.5.32/29
+      - 13.239.158.0/29
+      - 43.218.193.64/29
+      - 16.50.248.80/29
+      - 35.183.92.176/29
+      - 40.176.213.168/29
+      - 3.120.181.40/29
+      - 16.63.77.8/29
+      - 13.48.4.200/30
+      - 15.161.135.164/30
+      - 18.101.90.48/29
+      - 18.202.216.48/29
+      - 3.8.37.24/29
+      - 35.180.112.80/29
+      - 51.16.183.224/29
+      - 3.29.147.40/29
+      - 16.24.46.56/29
+      - 18.228.70.32/29
+      - 3.16.146.0/29
+      - 13.52.6.112/29
   MapPublicIpOnLaunch:
     Description: Enabled by default. Keep enabled for public IP assignment for EC2 instance connect
     Type: String
@@ -25,6 +55,14 @@ Parameters:
     Description: VPC CIDR
     Type: String
     Default: 10.0.1.0/24
+  InstanceType:
+    Description: EC2 instance type
+    Type: String
+    Default: t3.small
+    AllowedValues:
+      - t3.small
+      - t3.medium
+      - t3.large
 
 Resources:
   # Create a VPC
@@ -101,7 +139,7 @@ Resources:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
-          CidrIp: 18.237.140.160/29  # Restrict SSH access to a specific IP (CIDR for us-west-2)
+          CidrIp: !Ref SSHRegionIPsAllowed  # Restrict SSH access to a specific IP (CIDR for us-west-2)
 
   # Security Group Egress Rule
   InstanceSecurityGroupEgress:
