--- a/cfn/2-bedrock-agent-lambda-template.yaml
+++ b/cfn/2-bedrock-agent-lambda-template.yaml
@@ -251,6 +251,7 @@ Resources:
                   "/companyResearch": {
                     "post": {
                       "description": "Get financial data for a company by name",
+                      "operationId": "companyResearch",
                       "parameters": [
                         {
                           "name": "name",
@@ -279,6 +280,7 @@ Resources:
                   "/createPortfolio": {
                     "post": {
                       "description": "Create a company portfolio of top profit earners by specifying number of companies and industry",
+                      "operationId": "createPortfolio",
                       "parameters": [
                         {
                           "name": "numCompanies",
@@ -317,6 +319,7 @@ Resources:
                   "/sendEmail": {
                     "post": {
                       "description": "Send an email with FOMC search summary and created portfolio",
+                      "operationId": "sendEmail",
                       "parameters": [
                         {
                           "name": "emailAddress",
